--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
         gio('send');
     </script>
 </head>
-<script src="http://www.jq22.com/jquery/1.11.1/jquery.min.js"></script>
+
+<script src="js/jquery.min.js"></script>
+<script src="js/zoomify.js"></script>
 <script src="js/myJs.js"></script>
+
 <body class="homepage">
     <div class="info">
         <div class="avatar"></div>
