--- a/template_10.html
+++ b/template_10.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<script src="http://www.jq22.com/jquery/1.11.1/jquery.min.js"></script>
+<script src="js/jquery.min.js"></script>
 <script src="js/zoomify.js"></script>
 <script src="js/myJs.js"></script>
 
