--- a/template_10.html
+++ b/template_10.html
@@ -23,6 +23,12 @@
 </div>
 
 <div class="lists">
+
+    <div class="illustration">
+        <img src="images/10/34.png" alt="">
+        <span class="note">今年新年能收到红包吗？</span>
+    </div>
+
     <div class="illustration">
         <img src="images/10/33.png" alt="">
         <span class="note">初音ミクが円周率10,000桁覚えたようです</span>
