--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="images/smile.ico">
 </head>
 <body class="homepage">
-<div class="info">
+<div class="page-title">
     <div class="avatar"></div>
     <!--<div class="name">Zixiao / UI&UX</div>-->
 </div>
