--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <script src="js/myJs.js"></script>
 
 <body class="homepage">
-    <div class="info">
+    <div class="page-title">
         <div class="avatar"></div>
         <!--<div class="name">Zixiao / UI&UX</div>-->
     </div>
