--- a/template_10.html
+++ b/template_10.html
@@ -25,6 +25,16 @@
 <div class="lists">
 
     <div class="cell">
+        <img src="images/10/37.png" alt="">
+        <div class="note">猪年年画~</div>
+    </div>
+
+    <div class="cell">
+        <img src="images/10/34.png" alt="">
+        <div class="note">今年新年能收到红包吗？</div>
+    </div>
+
+    <div class="cell">
         <img src="images/10/36.png" alt="">
         <div class="note">新年「猪」事顺利呀~</div>
     </div>
@@ -34,15 +44,10 @@
         <div class="note">深海鳕鱼</div>
     </div>
 
-    <div class="cell">
-        <img src="images/10/34.png" alt="">
-        <div class="note">今年新年能收到红包吗？</div>
-    </div>
-
-    <div class="cell">
+<!--     <div class="cell">
         <img src="images/10/32.png" alt="">
         <div class="note">2019再接再厉~~</div>
-    </div>
+    </div> -->
 
     <div class="cell">
         <img src="images/10/33.png" alt="">
