add new project

--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@
 <!--         <a class="cell cell-project-g" href="template_7.html"></a> -->
     </div>
 
-    <div class="title">_Web</div>
+    <div class="title">_Web/物联设备</div>
     <div class="lists">
+        <!--人脸识别-->
+        <a class="cell cell-project-k" href="template_12.html"></a>
         <!--数据可视化-->
         <a class="cell cell-project-j" href="template_11.html"></a>
         <!--优社网-->
