--- a/template_11.html
+++ b/template_11.html
@@ -23,16 +23,18 @@
     Copyright：北京易居未来科技有限公司
 </div>
 <div class="detail" style="color: #ffffff">
-    公司物业相关可视化后台管理界面
+    大数据展示
+    <br>
+    公司物业相关可视化后台管理/监控界面
 </div>
 
-<div class="part" style="color: rgba(255,255,255,0.7)">(oﾟvﾟ)ノ小区安全监控系统</div>
+<div class="part" style="color: rgba(255,255,255,0.5)">(oﾟvﾟ)ノ小区安全监控系统</div>
 <div class="lists">
     <div class="page"><img src="images/11/0.png" alt=""></div>
 </div>
 
 
-<div class="part" style="color: rgba(255,255,255,0.7)">(oﾟvﾟ)ノ可定制可视化图表编辑</div>
+<div class="part" style="color: rgba(255,255,255,0.5)">(oﾟvﾟ)ノ可定制可视化图表编辑</div>
 <div class="lists">
     <div class="page"><img src="images/11/1.png" alt=""></div>
     <div class="page"><img src="images/11/2.png" alt=""></div>
