--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
     <a href="index.html" class="link">Projects</a>
     <a href="links.html" class="link">Links</a>
     <a href="" class="link link-selected">About</a>
+    <a href="message.html" class="link">message</a>
 </div>
 
 
