--- a/links.html
+++ b/links.html
@@ -16,6 +16,7 @@
     <a href="index.html" class="link">Projects</a>
     <a href="" class="link link-selected">Links</a>
     <a href="about.html" class="link">About</a>
+    <a href="message.html" class="link">message</a>
 </div>
 <div class="links">
     <div class="cell">
@@ -30,7 +31,6 @@
         <div class="logo logo-zoocl"></div>
         <a href="https://luozixiao.zcool.com.cn/" class="the-link">https://luozixiao.zcool.com.cn/</a>
     </div>
-
 </div>
 </body>
 </html>
