--- a/about.html
+++ b/about.html
@@ -8,15 +8,18 @@
     <link rel="shortcut icon" href="images/smile.ico">
 </head>
 <body class="homepage">
-<div class="page-title">
-    <div class="avatar"></div>
-    <!--<div class="name">Zixiao / UI&UX</div>-->
-</div>
-<div class="head">
-    <a href="index.html" class="link">Projects</a>
-    <a href="links.html" class="link">Links</a>
-    <a href="" class="link link-selected">About</a>
-    <a href="message.html" class="link">message</a>
+
+<div class="mobile-head">
+    <div class="page-title">
+        <div class="avatar"></div>
+        <!--<div class="name">Zixiao / UI&UX</div>-->
+    </div>
+    <div class="head">
+        <a href="index.html" class="link">项目</a>
+        <a href="links.html" class="link">链接</a>
+        <a href="" class="link link-selected">关于</a>
+        <a href="message.html" class="link">留言</a>
+    </div>
 </div>
 
 
