--- a/index.html
+++ b/index.html
@@ -24,24 +24,27 @@
 <script src="js/myJs.js"></script>
 
 <body class="homepage">
+
+<div class="mobile-head">
     <div class="page-title">
         <div class="avatar"></div>
         <!--<div class="name">Zixiao / UI&UX</div>-->
     </div>
     <div class="head">
-        <a href="" class="link link-selected">Projects</a>
-        <a href="links.html" class="link">Links</a>
-        <a href="about.html" class="link">About</a>
-        <a href="message.html" class="link">message</a>
+        <a href="" class="link link-selected">项目</a>
+        <a href="links.html" class="link">链接</a>
+        <a href="about.html" class="link">关于</a>
+        <a href="message.html" class="link">留言</a>
     </div>
+</div>
 
-    <div class="title">_Painting</div>
+    <div class="title">插画</div>
     <div class="lists">
         <!--手绘/插画-->
         <a class="cell cell-project-painting" href="template_10.html"></a>
     </div>
 
-    <div class="title">_Mobile</div>
+    <div class="title">移动端</div>
     <div class="lists">
         <!--易居生活3.0-->
         <a class="cell cell-project-h" href="template_8.html"></a>
@@ -57,7 +60,7 @@
 <!--         <a class="cell cell-project-g" href="template_7.html"></a> -->
     </div>
 
-    <div class="title">_Web/物联设备</div>
+    <div class="title">PC端&物联设备</div>
     <div class="lists">
         <!--人脸识别-->
         <a class="cell cell-project-k" href="template_12.html"></a>
