--- a/links.html
+++ b/links.html
@@ -8,16 +8,20 @@
     <link rel="shortcut icon" href="images/smile.ico">
 </head>
 <body class="homepage">
-<div class="page-title">
-    <div class="avatar"></div>
-    <!--<div class="name">Zixiao / UI&UX</div>-->
+
+<div class="mobile-head">
+    <div class="page-title">
+        <div class="avatar"></div>
+        <!--<div class="name">Zixiao / UI&UX</div>-->
+    </div>
+    <div class="head">
+        <a href="index.html" class="link">项目</a>
+        <a href="" class="link link-selected">链接</a>
+        <a href="about.html" class="link">关于</a>
+        <a href="message.html" class="link">留言</a>
+    </div>
 </div>
-<div class="head">
-    <a href="index.html" class="link">Projects</a>
-    <a href="" class="link link-selected">Links</a>
-    <a href="about.html" class="link">About</a>
-    <a href="message.html" class="link">message</a>
-</div>
+
 <div class="links">
     <div class="cell">
         <div class="logo logo-dribbble"></div>
@@ -29,7 +33,7 @@
     </div>
     <div class="cell">
         <div class="logo logo-zoocl"></div>
-        <a href="https://luozixiao.zcool.com.cn/" class="the-link">https://luozixiao.zcool.com.cn/</a>
+        <a href="https://luozixiao.zcool.com.cn/" class="the-link">https://luozixiao.zcool.com.cn</a>
     </div>
 </div>
 </body>
