--- a/message.html
+++ b/message.html
@@ -8,20 +8,22 @@
     <link rel="shortcut icon" href="images/smile.ico">
 </head>
 <body class="homepage">
-<div class="page-title">
-    <div class="avatar"></div>
-    <!--<div class="name">Zixiao / UI&UX</div>-->
-</div>
-<div class="head">
-    <a href="index.html" class="link">Projects</a>
-    <a href="links.html" class="link">Links</a>
-    <a href="about.html" class="link">About</a>
-    <a href="message.html" class="link link-selected">Message</a>
+<div class="mobile-head">
+    <div class="page-title">
+        <div class="avatar"></div>
+        <!--<div class="name">Zixiao / UI&UX</div>-->
+    </div>
+    <div class="head">
+        <a href="index.html" class="link">项目</a>
+        <a href="links.html" class="link">链接</a>
+        <a href="about.html" class="link">关于</a>
+        <a href="message.html" class="link link-selected">留言</a>
+    </div>
 </div>
 
 <div class="message-content">
     <div class="sign">
-        ヽ(✿ﾟ▽ﾟ)ノ    欢迎给我留言    (✿◡‿◡)
+        ヽ(✿ﾟ▽ﾟ)ノ    欢迎给我留言
     </div>
 </div>
 
