--- a/template_1.html
+++ b/template_1.html
@@ -29,12 +29,12 @@
     社交类应用。包含功能：社区物业管理，在线缴费，住户交流互动，闲置物品购买，手机开门等。
 </div>
 
-<div class="part">(oﾟvﾟ)ノ下载页</div>
+<div class="part">☺ 下载页</div>
 <div class="lists">
     <div class="cell"><img src="images/1/download.png" alt=""></div>
 </div>
 
-<div class="part">(oﾟvﾟ)ノ引导页</div>
+<div class="part">☺ 引导页</div>
 <div class="lists">
     <div class="cell"><img src="images/1/guid1.png" alt=""></div>
     <div class="cell"><img src="images/1/guid2.png" alt=""></div>
@@ -42,7 +42,7 @@
     <div class="cell"><img src="images/1/guid4.png" alt=""></div>
 </div>
 
-<div class="part">(oﾟvﾟ)ノ状态通知</div>
+<div class="part">☺ 状态通知</div>
 <div class="lists">
     <div class="cell"><img src="images/1/sketch-1.png" alt=""></div>
     <div class="cell"><img src="images/1/sketch-2.png" alt=""></div>
@@ -53,7 +53,7 @@
 </div>
 
 
-<div class="part">(oﾟvﾟ)ノ主要界面</div>
+<div class="part">☺ 主要界面</div>
 <div class="lists">
     <div class="cell"><img src="images/1/main-1.png" alt=""></div>
     <div class="cell"><img src="images/1/main-2.png" alt=""></div>
@@ -61,7 +61,7 @@
     <div class="cell"><img src="images/1/main-4.png" alt=""></div>
 </div>
 
-<div class="part">(oﾟvﾟ)ノ其他界面</div>
+<div class="part">☺ 其他界面</div>
 <div class="lists">
 	<div class="cell"><img src="images/1/else-13.png" alt=""></div>
     <div class="cell"><img src="images/1/else-1.png" alt=""></div>
