--- a/template_3.html
+++ b/template_3.html
@@ -26,13 +26,13 @@
     微商城。1919旗下1+9酒类定制购买客户端,包含功能：酒品购买和在线定制。
 </div>
 
-<div class="part">(oﾟvﾟ)ノ引导页</div>
+<div class="part">☺ 引导页</div>
 <div class="lists">
     <div class="cell"><img src="images/3/21.png" alt=""></div>
     <div class="cell"><img src="images/3/22.png" alt=""></div>
 </div>
 
-<div class="part">(oﾟvﾟ)ノ主界面</div>
+<div class="part">☺ 主界面</div>
 <div class="lists">
     <div class="cell"><img src="images/3/1.png" alt=""></div>
     <div class="cell"><img src="images/3/2.png" alt=""></div>
@@ -41,7 +41,7 @@
     <div class="cell"><img src="images/3/14.png" alt=""></div>
 </div>
 
-<div class="part">(oﾟvﾟ)ノ其他界面</div>
+<div class="part">☺ 其他界面</div>
 <div class="lists">
     <div class="cell"><img src="images/3/20.png" alt=""></div>
     <div class="cell"><img src="images/3/5.png" alt=""></div>
