--- a/template_8.html
+++ b/template_8.html
@@ -28,7 +28,7 @@
     社交类应用。包含功能：社区物业管理，在线缴费，住户交流互动，闲置物品购买，手机开门等。
 </div>
 
-<div class="part">(oﾟvﾟ)ノ主要界面</div>
+<div class="part">☺ 主要界面</div>
 <div class="lists">
     <div class="cell"><img src="images/8/main-0.png" alt=""></div>
     <div class="cell"><img src="images/8/main-1.png" alt=""></div>
@@ -36,7 +36,7 @@
     <div class="cell"><img src="images/8/main-3.png" alt=""></div>
 </div>
 
-<div class="part">(oﾟvﾟ)ノ状态界面</div>
+<div class="part">☺ 状态界面</div>
 <div class="lists">
     <div class="cell"><img src="images/8/status-0.png" alt=""></div>
     <div class="cell"><img src="images/8/status-1.png" alt=""></div>
@@ -49,7 +49,7 @@
 
  </div>
 
-<div class="part">(oﾟvﾟ)ノ其他界面</div>
+<div class="part">☺ 其他界面</div>
 <div class="lists">
     <div class="cell"><img src="images/8/else-1.png" alt=""></div>
     <div class="cell"><img src="images/8/else-2.png" alt=""></div>
