--- a/template_12.html
+++ b/template_12.html
@@ -41,13 +41,13 @@
     开门系统提供住户人像识别、采集，识别成功开门与访客密码开门功能。
 </div>
 
-<div class="part" style="color: rgba(255,255,255,0.7)">(oﾟvﾟ)ノ识别交互效果展示</div>
+<div class="part" style="color: rgba(255,255,255,0.7)">☺ 识别交互效果展示</div>
 <div class="lists">
     <div class="cell"><img src="images/12/gif.gif" alt=""></div>
 </div>
 
 
-<div class="part" style="color: rgba(255,255,255,0.7)">(oﾟvﾟ)ノ界面展示</div>
+<div class="part" style="color: rgba(255,255,255,0.7)">☺ 界面展示</div>
 <div class="lists">
     <div class="cell"><img src="images/12/1.png" alt=""></div>
     <div class="cell"><img src="images/12/2.png" alt=""></div>
