--- a/template_2.html
+++ b/template_2.html
@@ -26,14 +26,14 @@
     微信小程序。包含功能模块，农户闲置田地出租，发布蔬果采摘。客户采摘预约，田地租赁。
 </div>
 
-<div class="part">(oﾟvﾟ)ノ主页面</div>
+<div class="part">☺ 主页面</div>
 <div class="lists">
     <div class="cell"><img src="images/2/1.png" alt=""></div>
     <div class="cell"><img src="images/2/3.png" alt=""></div>
     <div class="cell"><img src="images/2/8.png" alt=""></div>
 </div>
 
-<div class="part">(oﾟvﾟ)ノ其他页面</div>
+<div class="part">☺ 其他页面</div>
 <div class="lists">
     <div class="cell"><img src="images/2/2.png" alt=""></div>
     <div class="cell"><img src="images/2/4.png" alt=""></div>
