--- a/template_9.html
+++ b/template_9.html
@@ -29,7 +29,7 @@
     方便员工在使用过程中能够快速选择功能、判断状态、查看消息。
 </div>
 
-<div class="part">(oﾟvﾟ)ノ主要界面</div>
+<div class="part">☺ 主要界面</div>
 <div class="lists">
     <div class="cell"><img src="images/9/1.png" alt=""></div>
     <div class="cell"><img src="images/9/2.png" alt=""></div>
@@ -37,7 +37,7 @@
     <div class="cell"><img src="images/9/4.png" alt=""></div>
 </div>
 
-<div class="part">(oﾟvﾟ)ノ其他界面</div>
+<div class="part">☺ 其他界面</div>
 <div class="lists">
     <div class="cell"><img src="images/9/5.png" alt=""></div>
     <div class="cell"><img src="images/9/6.png" alt=""></div>
