--- a/message.html
+++ b/message.html
@@ -9,6 +9,11 @@
     <link rel="shortcut icon" href="images/smile.ico">
     <script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
 </head>
+
+<script src="js/jquery.min.js"></script>
+<script src="js/zoomify.js"></script>
+<script src="js/myJs.js"></script>
+
 <body class="homepage">
 <div class="mobile-head">
     <div class="page-title">
