--- a/about.html
+++ b/about.html
@@ -30,8 +30,7 @@
     </div>
     <div class="cell">
         <span class="name">Wechat_ID:</span>
-        <span class="info we-chat" onmouseover="show()">Carole-mind
-        <i class="code_image" id="we_chant_img" onmouseout="hide()"></i>
+        <span class="info">Carole-mind</span>
         </span>
     </div>
 </div>
@@ -53,16 +52,16 @@
 </div>
 </body>
 
-<script type="text/javascript">
-    var target = document.getElementById('we_chant_img');
-    function show() {
-        target.style.visibility = 'visible';
-    }
+<!--<script type="text/javascript">-->
+    <!--var target = document.getElementById('we_chant_img');-->
+    <!--function show() {-->
+        <!--target.style.visibility = 'visible';-->
+    <!--}-->
 
-    function hide() {
-        target.style.visibility = 'hidden';
-    }
+    <!--function hide() {-->
+        <!--target.style.visibility = 'hidden';-->
+    <!--}-->
 
-</script>
+<!--</script>-->
 
 </html>
