--- a/template_10.html
+++ b/template_10.html
@@ -30,24 +30,9 @@
     </div>
 
     <div class="cell">
-        <img src="images/10/34.png" alt="">
-        <div class="note">今年新年能收到红包吗？</div>
-    </div>
-
-    <div class="cell">
         <img src="images/10/36.png" alt="">
         <div class="note">新年「猪」事顺利呀~</div>
     </div>
-
-    <div class="cell">
-        <img src="images/10/35.png" alt="">
-        <div class="note">深海鳕鱼</div>
-    </div>
-
-<!--     <div class="cell">
-        <img src="images/10/32.png" alt="">
-        <div class="note">2019再接再厉~~</div>
-    </div> -->
 
     <div class="cell">
         <img src="images/10/33.png" alt="">
@@ -60,18 +45,8 @@
     </div>
 
     <div class="cell">
-        <img src="images/10/30.png" alt="">
-        <div class="note">冬日里的烤红薯</div>
-    </div>
-
-    <div class="cell">
         <img src="images/10/29.png" alt="">
         <div class="note">冬天果然还是要吃冰糖葫芦啊！</div>
-    </div>
-
-    <div class="cell">
-        <img src="images/10/28.png" alt="">
-        <div class="note">立冬|包饺子</div>
     </div>
 
     <div class="cell">
@@ -100,13 +75,8 @@
     </div>
 
     <div class="cell">
-        <img src="images/10/21.png" alt="">
-        <div class="note">人像A</div>
-    </div>
-
-    <div class="cell">
         <img src="images/10/20.png" alt="">
-        <div class="note">人像B</div>
+        <div class="note">人像</div>
     </div>
 
     <div class="cell">
