--- a/template_12.html
+++ b/template_12.html
@@ -11,12 +11,13 @@
     <link rel="stylesheet" href="css/style.css">
     <style type="text/css">
         .lists img {
-            border-width: 30px 12px 16px;
-            border-image: linear-gradient(to bottom right, #4b4b4b, #0f0f0f, #2d2d2d) 30 30;
-            border-image: -webkit-border-image(to bottom right, #4b4b4b, #0f0f0f, #2d2d2d) 30 30;
-            border-image: -o-border-image(to bottom right, #4b4b4b, #0f0f0f, #2d2d2d) 30 30;
-            border-image: -moz-border-image(to bottom right, #4b4b4b, #0f0f0f, #2d2d2d) 30 30;
-            border-style: solid;
+            border-radius: 8px;
+            /*border-width: 30px 12px 16px;*/
+            /*border-image: linear-gradient(to bottom right, #878787, #414141, #737373) 30 30;*/
+            /*border-image: -webkit-border-image(to bottom right, #878787, #414141, #737373) 30 30;*/
+            /*border-image: -o-border-image(to bottom right, #878787, #414141, #737373) 30 30;*/
+            /*border-image: -moz-border-image(to bottom right, #878787, #414141, #737373) 30 30;*/
+            /*border-style: solid;*/
         }
     </style>
 </head>
@@ -25,14 +26,14 @@
 <script src="js/zoomify.js"></script>
 <script src="js/myJs.js"></script>
 
-<body class="template" style="background: #000000">
-<div class="title" style="color: #ffffff">小区住户人脸识别开门系统</div>
-<div class="period" style="color: #ffffff">| Early 2019 |</div>
-<div class="info" style="color: rgba(255,255,255,0.7)">
+<body class="template">
+<div class="title">小区住户人脸识别开门系统</div>
+<div class="period">| Early 2019 |</div>
+<div class="info">
     Tool：Sketch | AE  <br>
     Copyright：北京易居未来科技有限公司
 </div>
-<div class="detail" style="color: #ffffff">
+<div class="detail">
     Android设备
     <br>
     人脸识别开门系统采用10.1英寸显示器搭载人像识别摄像头进行识别。
@@ -41,13 +42,13 @@
     开门系统提供住户人像识别、采集，识别成功开门与访客密码开门功能。
 </div>
 
-<div class="part" style="color: rgba(255,255,255,0.7)">☺ 识别交互效果展示</div>
+<div class="part">☺ 识别交互效果展示</div>
 <div class="lists">
     <div class="cell"><img src="images/12/gif.gif" alt=""></div>
 </div>
 
 
-<div class="part" style="color: rgba(255,255,255,0.7)">☺ 界面展示</div>
+<div class="part">☺ 界面展示</div>
 <div class="lists">
     <div class="cell"><img src="images/12/1.png" alt=""></div>
     <div class="cell"><img src="images/12/2.png" alt=""></div>
