--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Zixiao's</title>
+    <title>关于</title>
     <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" href="images/smile.ico">
 </head>
