--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="UI设计,UIDesign,作品集,graphic,illustrator,插画,UX"/>
+    <meta name="keywords" content="zixiao,UI设计,UIDesign,作品集,graphic,罗子潇,插画,UX"/>
     <meta name="description" content="zixiaoのchannel" />
     <meta name="author" content="zixiao">
     <meta name="copyright" content="本页版权归罗子潇所有 all rights reserved">
     <meta http-equiv="window-target" content="_top">
-    <title>zixiao</title>
+    <title>Zixiao's Blog</title>
     <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" href="images/smile.ico">
     <!--检测访客-->
