--- a/template_12.html
+++ b/template_12.html
@@ -51,6 +51,7 @@
 <div class="part">☺ 界面展示</div>
 <div class="lists">
     <div class="cell"><img src="images/12/1.png" alt=""></div>
+    <div class="cell"><img src="images/12/update.gif" alt=""></div>
     <div class="cell"><img src="images/12/2.png" alt=""></div>
     <div class="cell"><img src="images/12/3.png" alt=""></div>
     <div class="cell"><img src="images/12/4.png" alt=""></div>
