--- a/about.html
+++ b/about.html
@@ -50,6 +50,9 @@
         <span class="info">Sichuan normal university | 2012-2016</span>
     </div>
 </div>
+
+<div class="page-bottom">2019 © Zixiao Luo</div>
+
 </body>
 
 <!--<script type="text/javascript">-->
