--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
     <div class="title">移动端</div>
     <div class="lists">
         <!--易居生活3.0-->
-        <a class="cell cell-project-h" href="template_8.html"></a>
+        <a class="cell cell-project-h" href="template_8.html" title="易居生活Version2.0"></a>
         <!--易居生活-->
-        <a class="cell cell-project-a" href="template_1.html"></a>
+        <a class="cell cell-project-a" href="template_1.html" title="易居生活Version1.0"></a>
          <!--易居管家-->
-        <a class="cell cell-project-i" href="template_9.html"></a>
+        <a class="cell cell-project-i" href="template_9.html" title="易居管家"></a>
         <!--果蔬网-->
-        <a class="cell cell-project-b" href="template_2.html"></a>
+        <a class="cell cell-project-b" href="template_2.html" title="共享果蔬园"></a>
         <!--1+9商城-->
-        <a class="cell cell-project-c" href="template_3.html"></a>
+        <a class="cell cell-project-c" href="template_3.html" title="1+9微信商城"></a>
         <!--房管局-->
 <!--         <a class="cell cell-project-g" href="template_7.html"></a> -->
     </div>
@@ -63,15 +63,17 @@
     <div class="title">PC端&物联设备</div>
     <div class="lists">
         <!--人脸识别-->
-        <a class="cell cell-project-k" href="template_12.html"></a>
+        <a class="cell cell-project-k" href="template_12.html" title="人脸识别系统"></a>
         <!--数据可视化-->
-        <a class="cell cell-project-j" href="template_11.html"></a>
+        <a class="cell cell-project-j" href="template_11.html" title="大数据可视化"></a>
         <!--优社网-->
-        <a class="cell cell-project-f" href="template_6.html"></a>
+        <a class="cell cell-project-f" href="template_6.html" title="优社网"></a>
         <!--装修网站-->
-        <a class="cell cell-project-e" href="template_5.html"></a>
+        <a class="cell cell-project-e" href="template_5.html" title="装修网站"></a>
     </div>
 
     <div class="to-top" id="to_top"></div>
+
+    <div class="page-bottom">2019 © Zixiao Luo</div>
 </body>
 </html>
