--- a/links.html
+++ b/links.html
@@ -36,5 +36,8 @@
         <a href="https://luozixiao.zcool.com.cn/" class="the-link">https://luozixiao.zcool.com.cn</a>
     </div>
 </div>
+
+<div class="page-bottom">2019 © Zixiao Luo</div>
+
 </body>
 </html>
