--- a/message.html
+++ b/message.html
@@ -37,6 +37,8 @@
 
 <div class="to-top" id="to_top"></div>
 
+<div class="page-bottom">2019 © Zixiao Luo</div>
+
 <script type="text/javascript">
     var target = document.getElementById('we_chant_img');
     function show() {
@@ -60,5 +62,5 @@
     gitalk.render('gitalk-container');
 
 </script>
-
+</body>
 </html>
