--- a/template_6.html
+++ b/template_6.html
@@ -36,6 +36,10 @@
     <div class="page"><img src="images/6/6.png" alt=""></div>
     <div class="page"><img src="images/6/7.png" alt=""></div>
 </div>
+
 <div class="to-top" id="to_top"></div>
+
+<div class="page-bottom">2019 © Zixiao Luo</div>
+
 </body>
 </html>
