change page width

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" href="images/smile.ico">
     <!--检测访客-->
-    <script type='text/javascript'>
-        !function(e,t,n,g,i){e[i]=e[i]||function(){(e[i].q=e[i].q||[]).push(arguments)},n=t.createElement("script"),tag=t.getElementsByTagName("script")[0],n.async=1,n.src=('https:'==document.location.protocol?'https://':'http://')+g,tag.parentNode.insertBefore(n,tag)}(window,document,"script","assets.growingio.com/2.1/gio.js","gio");
-        gio('init','931fa16285d761ac', {});
-        gio('send');
-    </script>
+    <!--<script type='text/javascript'>-->
+        <!--!function(e,t,n,g,i){e[i]=e[i]||function(){(e[i].q=e[i].q||[]).push(arguments)},n=t.createElement("script"),tag=t.getElementsByTagName("script")[0],n.async=1,n.src=('https:'==document.location.protocol?'https://':'http://')+g,tag.parentNode.insertBefore(n,tag)}(window,document,"script","assets.growingio.com/2.1/gio.js","gio");-->
+        <!--gio('init','931fa16285d761ac', {});-->
+        <!--gio('send');-->
+    <!--</script>-->
 </head>
 
 <script src="js/jquery.min.js"></script>
@@ -31,7 +31,7 @@
         <!--<div class="name">Zixiao / UI&UX</div>-->
     </div>
     <div class="head">
-        <a href="" class="link link-selected">项目</a>
+        <a href="" class="link link-selected">作品</a>
         <a href="links.html" class="link">链接</a>
         <a href="about.html" class="link">关于</a>
         <a href="message.html" class="link">留言</a>
@@ -41,35 +41,35 @@
     <div class="title">插画</div>
     <div class="lists">
         <!--手绘/插画-->
-        <a class="cell cell-project-painting" href="template_10.html"></a>
+        <a class="cell cell-project-painting" onclick="window.open('template_10.html')"></a>
     </div>
 
-    <div class="title">移动端</div>
+    <div class="title">移动设备 UI/UX</div>
     <div class="lists">
         <!--易居生活3.0-->
-        <a class="cell cell-project-h" href="template_8.html" title="易居生活Version2.0"></a>
+        <a class="cell cell-project-h" title="易居生活Version2.0" onclick="window.open('template_8.html')"></a>
         <!--易居生活-->
-        <a class="cell cell-project-a" href="template_1.html" title="易居生活Version1.0"></a>
+        <a class="cell cell-project-a" title="易居生活Version1.0" onclick="window.open('template_1.html')"></a>
          <!--易居管家-->
-        <a class="cell cell-project-i" href="template_9.html" title="易居管家"></a>
+        <a class="cell cell-project-i" title="易居管家" onclick="window.open('template_9.html')"></a>
         <!--果蔬网-->
-        <a class="cell cell-project-b" href="template_2.html" title="共享果蔬园"></a>
+        <a class="cell cell-project-b" title="共享果蔬园" onclick="window.open('template_2.html')"></a>
         <!--1+9商城-->
-        <a class="cell cell-project-c" href="template_3.html" title="1+9微信商城"></a>
+        <a class="cell cell-project-c" title="1+9微信商城" onclick="window.open('template_3.html')"></a>
         <!--房管局-->
 <!--         <a class="cell cell-project-g" href="template_7.html"></a> -->
     </div>
 
-    <div class="title">PC端&物联设备</div>
+    <div class="title">PC&物联设备 UI/UX</div>
     <div class="lists">
         <!--人脸识别-->
-        <a class="cell cell-project-k" href="template_12.html" title="人脸识别系统"></a>
+        <a class="cell cell-project-k" title="人脸识别系统" onclick="window.open('template_12.html')"></a>
         <!--数据可视化-->
-        <a class="cell cell-project-j" href="template_11.html" title="大数据可视化"></a>
+        <a class="cell cell-project-j" title="大数据可视化" onclick="window.open('template_11.html')"></a>
         <!--优社网-->
-        <a class="cell cell-project-f" href="template_6.html" title="优社网"></a>
+        <a class="cell cell-project-f" title="优社网" onclick="window.open('template_6.html')"></a>
         <!--装修网站-->
-        <a class="cell cell-project-e" href="template_5.html" title="装修网站"></a>
+        <a class="cell cell-project-e" title="装修网站" onclick="window.open('template_5.html')"></a>
     </div>
 
     <div class="to-top" id="to_top"></div>
