--- a/message.html
+++ b/message.html
@@ -21,7 +21,7 @@
         <!--<div class="name">Zixiao / UI&UX</div>-->
     </div>
     <div class="head">
-        <a href="index.html" class="link">项目</a>
+        <a href="index.html" class="link">作品</a>
         <a href="links.html" class="link">链接</a>
         <a href="about.html" class="link">关于</a>
         <a href="message.html" class="link link-selected">留言</a>
