--- a/template_12.html
+++ b/template_12.html
@@ -42,6 +42,11 @@
     开门系统提供住户人像识别、采集，识别成功开门与访客密码开门功能。
 </div>
 
+<div class="part">☺ VI宣传册</div>
+<div class="lists">
+    <div class="page"><img src="images/12/paper.png" alt=""></div>
+</div>
+
 <div class="part">☺ 识别交互效果展示</div>
 <div class="lists">
     <div class="cell"><img src="images/12/gif.gif" alt=""></div>
