--- a/links.html
+++ b/links.html
@@ -15,7 +15,7 @@
         <!--<div class="name">Zixiao / UI&UX</div>-->
     </div>
     <div class="head">
-        <a href="index.html" class="link">项目</a>
+        <a href="index.html" class="link">作品</a>
         <a href="" class="link link-selected">链接</a>
         <a href="about.html" class="link">关于</a>
         <a href="message.html" class="link">留言</a>
