--- a/template_12.html
+++ b/template_12.html
@@ -47,23 +47,22 @@
     <div class="page"><img src="images/12/paper.png" alt=""></div>
 </div>
 
-<div class="part">☺ 识别交互效果展示</div>
+<div class="part">☺ 交互效果展示</div>
 <div class="lists">
-    <div class="cell"><img src="images/12/gif.gif" alt=""></div>
+    <div class="cell"><img src="images/12-1/gif-1.gif" alt=""></div>
+    <div class="cell"><img src="images/12-1/gif-2.gif" alt=""></div>
+    <div class="cell"><img src="images/12-1/gif-3.gif" alt=""></div>
 </div>
 
 
 <div class="part">☺ 界面展示</div>
 <div class="lists">
-    <div class="cell"><img src="images/12/1.png" alt=""></div>
-    <div class="cell"><img src="images/12/update.gif" alt=""></div>
-    <div class="cell"><img src="images/12/2.png" alt=""></div>
-    <div class="cell"><img src="images/12/3.png" alt=""></div>
-    <div class="cell"><img src="images/12/4.png" alt=""></div>
-    <div class="cell"><img src="images/12/5.png" alt=""></div>
-    <div class="cell"><img src="images/12/6.png" alt=""></div>
-    <div class="cell"><img src="images/12/7.png" alt=""></div>
-    <div class="cell"><img src="images/12/8.png" alt=""></div>
+    <div class="cell"><img src="images/12-1/1.png" alt=""></div>
+    <div class="cell"><img src="images/12-1/2.png" alt=""></div>
+    <div class="cell"><img src="images/12-1/3.png" alt=""></div>
+    <div class="cell"><img src="images/12-1/4.png" alt=""></div>
+    <div class="cell"><img src="images/12-1/5.png" alt=""></div>
+    <div class="cell"><img src="images/12-1/6.png" alt=""></div>
 </div>
 
 <div class="to-top" id="to_top"></div>
