--- a/template_10.html
+++ b/template_10.html
@@ -24,9 +24,17 @@
 
 <div class="illustrations">
 
+
+    <div class="illustration">
+        <img src="images/10/39.gif" alt="">
+    </div>
+
+    <div class="illustration">
+        <img src="images/10/38.png" alt="">
+    </div>
+
     <div class="illustration">
         <img src="images/10/37.png" alt="">
-        <!--<div class="note">猪年年画~</div>-->
     </div>
 
     <div class="illustration">
