--- a/template_10.html
+++ b/template_10.html
@@ -24,6 +24,9 @@
 
 <div class="illustrations">
 
+    <div class="illustration">
+        <img src="images/10/40.png" alt="">
+    </div>
 
     <div class="illustration">
         <img src="images/10/39.gif" alt="">
