--- a/message.html
+++ b/message.html
@@ -30,7 +30,7 @@
 
 <div class="message-content">
     <div class="sign">
-        ヽ(✿ﾟ▽ﾟ)ノ    欢迎给我留言
+        谢谢你给我留言，我会及时查看的~
     </div>
 </div>
 <div id="gitalk-container"></div>
