--- a/template_10.html
+++ b/template_10.html
@@ -25,6 +25,10 @@
 <div class="illustrations">
 
     <div class="illustration">
+        <img src="images/10/41.png" alt="">
+    </div>
+
+    <div class="illustration">
         <img src="images/10/40.png" alt="">
     </div>
 
