--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" href="images/smile.ico">
     <!--检测访客-->
-    <script type='text/javascript'>
-        !function(e,t,n,g,i){e[i]=e[i]||function(){(e[i].q=e[i].q||[]).push(arguments)},n=t.createElement("script"),tag=t.getElementsByTagName("script")[0],n.async=1,n.src=('https:'==document.location.protocol?'https://':'http://')+g,tag.parentNode.insertBefore(n,tag)}(window,document,"script","assets.growingio.com/2.1/gio.js","gio");
-        gio('init','931fa16285d761ac', {});
-        gio('send');
-    </script>
+    <!--<script type='text/javascript'>-->
+        <!--!function(e,t,n,g,i){e[i]=e[i]||function(){(e[i].q=e[i].q||[]).push(arguments)},n=t.createElement("script"),tag=t.getElementsByTagName("script")[0],n.async=1,n.src=('https:'==document.location.protocol?'https://':'http://')+g,tag.parentNode.insertBefore(n,tag)}(window,document,"script","assets.growingio.com/2.1/gio.js","gio");-->
+        <!--gio('init','931fa16285d761ac', {});-->
+        <!--gio('send');-->
+    <!--</script>-->
 </head>
 
 <script src="js/jquery.min.js"></script>
@@ -56,6 +56,8 @@
         <a class="cell cell-project-b" title="共享果蔬园" onclick="window.open('template_2.html')"></a>
         <!--1+9商城-->
         <a class="cell cell-project-c" title="1+9微信商城" onclick="window.open('template_3.html')"></a>
+        <!--1+9商城-->
+        <a class="cell cell-project-m" title="公众号项目" onclick="window.open('template_14.html')"></a>
         <!--房管局-->
 <!--         <a class="cell cell-project-g" href="template_7.html"></a> -->
     </div>
@@ -66,6 +68,8 @@
         <a class="cell cell-project-k" title="人脸识别系统" onclick="window.open('template_12.html')"></a>
         <!--数据可视化-->
         <a class="cell cell-project-j" title="大数据可视化" onclick="window.open('template_11.html')"></a>
+        <!--B端管理-->
+        <a class="cell cell-project-l" title="B端管理" onclick="window.open('template_13.html')"></a>
         <!--优社网-->
         <a class="cell cell-project-f" title="优社网" onclick="window.open('template_6.html')"></a>
         <!--装修网站-->
