--- a/template_11.html
+++ b/template_11.html
@@ -28,6 +28,12 @@
     公司物业相关可视化后台管理/监控界面
 </div>
 
+<div class="lists">
+    <video controls="controls" autoplay="autoplay" style="height:400px">
+        <source src="images/11/video.mp4" type="video/mp4" />
+    </video>
+</div>
+
 <div class="part" style="color: rgba(255,255,255,0.5)">☺ 小区安全监控系统</div>
 <div class="lists">
     <div class="page"><img src="images/11/0.png" alt=""></div>
