--- a/index.html
+++ b/index.html
@@ -50,14 +50,13 @@
         <a class="cell cell-project-h" title="易居生活Version2.0" onclick="window.open('template_8.html')"></a>
         <!--易居生活-->
         <a class="cell cell-project-a" title="易居生活Version1.0" onclick="window.open('template_1.html')"></a>
-         <!--易居管家-->
-        <a class="cell cell-project-i" title="易居管家" onclick="window.open('template_9.html')"></a>
+        <!--1+9商城-->
+        <a class="cell cell-project-m" title="公众号项目" onclick="window.open('template_15.html')"></a><!--易居管家-->
+        <!--<a class="cell cell-project-i" title="易居管家" onclick="window.open('template_9.html')"></a>-->
         <!--果蔬网-->
         <a class="cell cell-project-b" title="共享果蔬园" onclick="window.open('template_2.html')"></a>
         <!--1+9商城-->
         <a class="cell cell-project-c" title="1+9微信商城" onclick="window.open('template_3.html')"></a>
-        <!--1+9商城-->
-        <a class="cell cell-project-m" title="公众号项目" onclick="window.open('template_14.html')"></a>
         <!--房管局-->
 <!--         <a class="cell cell-project-g" href="template_7.html"></a> -->
     </div>
