--- a/template_13.html
+++ b/template_13.html
@@ -41,9 +41,14 @@
 <div class="lists">
     <div class="page"><img src="images/13/1.png" alt=""></div>
     <div class="page"><img src="images/13/4.png" alt=""></div>
-    <div class="page"><img src="images/13/3.png" alt=""></div>
     <div class="page"><img src="images/13/2.png" alt=""></div>
 </div>
+
+<div class="part">☺ 个人练习</div>
+<div class="lists">
+    <div class="page"><img src="images/13/3.png" alt=""></div>
+</div>
+
 
 <div class="to-top" id="to_top"></div>
 
