--- a/template_11.html
+++ b/template_11.html
@@ -39,6 +39,11 @@
     <div class="page"><img src="images/11/0.png" alt=""></div>
 </div>
 
+<div class="part" style="color: rgba(255,255,255,0.5)">☺ 智慧物业监测平台</div>
+<div class="lists">
+    <div class="page"><img src="images/11/7.png" alt=""></div>
+</div>
+
 
 <div class="part" style="color: rgba(255,255,255,0.5)">☺ 可定制可视化图表编辑</div>
 <div class="lists">
